# dure

./: .gitignore  AGENTS.md  README.md  alembic.ini  pyproject.toml  setup.py
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  mirror-repository.yml  publish-apt.yml
debian/: changelog  control  dure.install  rules
docs/: README.md  apt-distribution.md  architecture.md  artifact-distribution.md  benchmarking.md  development.md  dure-proposal.md  model-selection.md  operations.md  roadmap.md  security.md  stage-artifacts.md
dure/: README.md  pyproject.toml  setup.py
dure/debian/: changelog  dure.install  rules
dure/docs/: README.md  agent-operations.md  api-contract.md  apt-distribution.md  architecture.md  artifact-distribution.md  benchmarking.md  data-retention.md  (+16 more)
packaging/: dure-client.env  dure-server.service
saem/: README.md  SESSION_LOG.md  pyproject.toml  setup.py
saem/saem/common/: config.py
saem/saem/roles/: api_proxy.py  crawler.py  ingest_coordinator.py  qdrant_primary.py  retrieval_gateway.py
speed/: async_pipeline_optimizer.py
tests/: helpers.py  test_agent.py  test_agent_preparation.py  test_artifact_cache_lifecycle.py  test_artifact_preparation_control.py  test_benchmark_tasks.py  test_capacity.py  test_cli.py  test_control.py  test_control_api.py  test_core_package.py  test_deployment_rollout.py  test_diagnostics.py  test_inventory_planning.py  test_join.py  test_migrations.py  test_model_store.py  test_planner.py  test_probe.py  test_readiness.py  test_recommendation.py  test_runtime.py
tools/: release_provenance.py
(+64 files in other folders)
