[project]
name = "saem"
version = "0.1.0"
description = "Saem RAG cluster: install-once, role-assign-from-head node package"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "click",
    "pyyaml",
    "qdrant-client",
    "sentence-transformers",
]

[project.scripts]
saem = "saem.cli:main"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
